--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,13 @@
 </head>
 <body>
 	<div class="content">
-		<h1>This is a plain old website</h1>
-		<p>I can make images with AI. Ask me to make images for you.</p>
+		<h1>Client-side tool use, powered by Cloudflare Workers, OpenAI Realtime API, and Replicate</h1>
+
+		<ul>
+			<li>Ask me to change the background color</li>
+			<li>Ask me to change the text color</li>
+			<li>Ask me to make an image for you</li>
+		</ul>
 
 		<div id="image-container"></div>
 	</div>
